--- a/views/main_nuevo-elem.html
+++ b/views/main_nuevo-elem.html
@@ -45,7 +45,7 @@
 
           <div class="form-group">
             <label for="portada" class="form-label" enctype="multipart/form-data" >Portada</label>
-            <input type="file" name="image" class="form-control" id="portada" /> 
+            <input type="file" name="image" class="form-control" id="portada" required /> 
           </div>
 
           <div class="form-group">
